--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  #google_maps_flutter: ^2.6.1
+  google_maps_flutter: ^2.6.1
+  geocoding: ^3.0.0
+  flutter_google_places: ^0.3.0
   #sliding_up_panel: ^2.0.0+1
-  flutter_svg: ^2.0.10+1
+  flutter_svg: ^2.0.9
+  google_maps_webservice: ^0.0.20-nullsafety.5
 
 dev_dependencies:
   flutter_test:
