--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "com.android.application"
+    id "com.example.flutter_application_1"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
 }
@@ -25,7 +25,7 @@ if (flutterVersionName == null) {
 android {
     namespace = "com.example.flutter_application_1"
     // Use uma versão recente e estável do SDK de compilação
-    compileSdk = 34
+    compileSdk = 35
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -41,7 +41,7 @@ android {
         applicationId = "com.example.flutter_application_1"
         // O minSdk recomendado para a maioria dos apps hoje
         minSdk = 23
-        targetSdk = 34
+        targetSdk = 35
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
     }
