--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   flutter_google_places: ^0.3.0
   #sliding_up_panel: ^2.0.0+1
   flutter_svg: ^2.0.9
-  google_maps_webservice: ^0.0.20-nullsafety.5
+  #google_maps_webservice: ^0.0.20-nullsafety.5
 
 dev_dependencies:
   flutter_test:
