--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,17 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^3.1.1
+  flutter_google_places: ^0.3.0
+  google_maps_webservice: ^0.0.20-nullsafety.5
+  geocoding: ^3.0.0
   firebase_auth: ^5.1.1
   cloud_firestore: ^5.0.2 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  #google_maps_flutter: ^2.6.1
+  google_maps_flutter: ^2.6.1
   #sliding_up_panel: ^2.0.0+1
-  flutter_svg: ^2.0.10+1
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
