--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,14 +32,17 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.29.0
   firebase_auth: ^4.19.2
+  async: ^2.11.0
   cloud_firestore: ^4.17.2
-  flutter_google_places: ^0.3.0
+  #flutter_google_places: ^0.3.0
   google_maps_webservice: ^0.0.20-nullsafety.5
   geocoding: ^3.0.0
   cupertino_icons: ^1.0.8
   google_maps_flutter: ^2.6.1
   #sliding_up_panel: ^2.0.0+1
   flutter_svg: ^2.0.9
+  rxdart: ^0.27.7
+  google_places_autocomplete_text_field: ^1.1.0
 
 dev_dependencies:
   flutter_test:
