--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,11 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.29.0
   firebase_auth: ^4.19.2
+  flutter_dotenv: ^5.1.0
   async: ^2.11.0
   cloud_firestore: ^4.17.2
   #flutter_google_places: ^0.3.0
-  google_maps_webservice: ^0.0.20-nullsafety.5
+  #google_maps_webservice: ^0.0.20-nullsafety.5
   geocoding: ^3.0.0
   cupertino_icons: ^1.0.8
   google_maps_flutter: ^2.6.1
@@ -51,8 +52,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-dependency_overrides:
-  http: ^0.13.0
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -64,6 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - api.env
     - assets/images/
     - assets/icons/ 
 
