--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   #sliding_up_panel: ^2.0.0+1
   flutter_svg: ^2.0.9
   rxdart: ^0.27.7
-  google_places_autocomplete_text_field: ^1.1.0
+  google_maps_places_autocomplete_widgets: ^1.3.3
+  #google_places_autocomplete_text_field: ^1.1.0
 
 dev_dependencies:
   flutter_test:
