--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,10 @@ dependencies:
   google_maps_flutter: ^2.6.1
   #sliding_up_panel: ^2.0.0+1
   flutter_svg: ^2.0.9
-  rxdart: ^0.27.7
+  rxdart: ^0.28.0
   google_maps_places_autocomplete_widgets: ^1.3.3
+  google_places_autocomplete: ^0.1.0
+  google_maps_apis: ^1.1.1
   #google_places_autocomplete_text_field: ^1.1.0
 
 dev_dependencies:
