--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,23 +30,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.29.0
-  firebase_auth: ^4.19.2
-  flutter_dotenv: ^5.1.0
+  firebase_core: ^4.2.0
+  firebase_auth: ^6.1.1
+  flutter_dotenv: ^6.0.0
   async: ^2.11.0
-  cloud_firestore: ^4.17.2
-  #flutter_google_places: ^0.3.0
-  #google_maps_webservice: ^0.0.20-nullsafety.5
-  geocoding: ^3.0.0
+  cloud_firestore: ^6.0.3
+  geocoding: ^4.0.0
   cupertino_icons: ^1.0.8
   google_maps_flutter: ^2.6.1
-  #sliding_up_panel: ^2.0.0+1
   flutter_svg: ^2.0.9
   rxdart: ^0.28.0
   google_maps_places_autocomplete_widgets: ^1.3.3
   google_places_autocomplete: ^0.1.0
   google_maps_apis: ^1.1.1
-  #google_places_autocomplete_text_field: ^1.1.0
+  geolocator: ^13.0.4
+  geoflutterfire_plus: ^0.0.33
 
 dev_dependencies:
   flutter_test:
