--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,6 +23,20 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+/*Properties properties = new Properties()
+File envFile = rootProject.file('../../api.env') 
+if (envFile.exists()) {
+    properties.load(new FileInputStream(envFile))
+} else {
+    File localPropertiesFiles = rootProject.file('local.properties')
+    if (localPropertiesFiles.exists()) {
+        properties.load(new FileInputStream(localPropertiesFiles))
+    }
+}
+
+// 2. Define um valor padrão caso a chave não seja encontrada
+def mapsApiKey = properties.getProperty('kGoogleApiKey') ?: "CHAVE_NAO_ENCONTRADA"*/
+
 android {
     namespace = "com.example.flutter_application_1"
     // Use uma versão recente e estável do SDK de compilação
@@ -46,6 +60,9 @@ android {
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
         multiDexEnabled true
+        //manifestPlaceholders = [
+        //    'MAPS_API_KEY': mapsApiKey
+       // ]
     }
 
     buildTypes {
