--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_maps_apis: ^1.1.1
   geolocator: ^13.0.4
   geoflutterfire_plus: ^0.0.33
+  firebase_messaging: ^16.0.3
 
 dev_dependencies:
   flutter_test:
