--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Precisamos de acesso à sua galeria para você selecionar uma foto de perfil ou emblema de equipe.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Precisamos de acesso à sua câmera para você tirar uma foto de perfil ou emblema de equipe.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
     <string>Precisamos da sua localização para mostrar eventos esportivos próximos a você.</string>
 	<key>CFBundleDevelopmentRegion</key>
