--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   geolocator: ^13.0.4
   geoflutterfire_plus: ^0.0.33
   firebase_messaging: ^16.0.3
+  firebase_storage: ^13.0.4
+  image_picker: ^1.2.0
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
