Google Sign In Fixed and IOS configuration

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.jetifier.ignorelist = byte-buddy
+kotlin.jvm.target.validation.mode = IGNORE
