--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   image_picker: ^1.2.0
   path: ^1.9.0
   google_sign_in: ^7.1.1
+  dropdown_search: ^6.0.2
 
 dev_dependencies:
   flutter_test:
